<resources>
    <string name="app_name">PhotoIt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_draw">Draw</string>
    <string name="title_activity_game">Your Turn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_guess">Guess</string>
    <string name="title_activity_holiday">HolidayActivity</string>
    <string name="happyNewYear">The PhotoIt team wish you a happy new year.\nThe app will be back 11 of january with a lot of surprise</string>

    <string name="my_photos">My photos</string>
    <string name="best_photos">Best photos</string>
    <string name="my_photos_liked">My liked photos</string>
    <string name="photo_not_rated">Photo not rated</string>
    <string name="my_account">My account</string>
    <string name="my_account_manage">Account management</string>


    <string name="logout">Logout</string>


</resources>
