<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_photos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_photos" />
        <item
            android:id="@+id/nav_best_photos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/best_photos" />

        <item
            android:id="@+id/nav_my_liked"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_photos_liked" />
        <item
            android:id="@+id/nav_not_rated"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/photo_not_rated" />


    </group>

    <item android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_account_manage" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
